--- a/source/_posts/20230218 - 缓存淘汰策略.md
+++ b/source/_posts/20230218 - 缓存淘汰策略.md
@@ -9,7 +9,8 @@ categories:
 comments: true
 keywords: 缓存淘汰策略
 date: 2023-02-18 17:10:57
-description:
+description: 
+share: "true"
 ---
 
 <!--more-->
@@ -20,7 +21,7 @@ LRU 与 LFU 缓存策略及其实现。
 
 ## 应用层缓存
 
-![image-20230218171235871](source/assets/images/image-20230218171235871.png)
+![image-20230218171235871](assets/images/image-20230218171235871.png)
 
 鉴于磁盘和内存读写的差异性，DB 中低频写、高频读的数据适合放入内存中，直接供应用层读写。在项目中读取用户资料时就使用到了 LRU，而非放到 Redis 中。
 
@@ -48,9 +49,9 @@ Get(key string) interface{}      // 读数据
 
 - 使用链表：由于缓存读写删都是高频操作，考虑使用写删都为 O(1) 的**链表**，而非写删都为 O(N) 的数组。
 - 使用双链表：选用删除操作为 O(1) 的**双链表**而非删除为 O(N) 的单链表。
-- 维护额外哈希表：链表查找必须遍历  O(N) 读取，可在缓存中维护 `map[key]*Node` 的**哈希表**来实现O(1) 的链表查找。
+- 维护额外哈希表：链表查找必须遍历 O(N) 读取，可在缓存中维护 `map[key]*Node` 的**哈希表**来实现 O(1) 的链表查找。
 
-![image-20220903225628251](source/assets/images/image-20220903225628251.png)
+![image-20220903225628251](assets/images/image-20220903225628251.png)
 
 直接使用链表节点存储缓存的 K-V 数据，链表从 head 到 tail 使用频率逐步降低。新访问数据不断追加到 head 前边，旧数据不断从 tail 剔除。LRU 使用链表顺序性保证了热数据在 head，冷数据在 tail。
 
@@ -185,8 +186,6 @@ func (c *LRUCache) Get(k string) interface{} {
 }
 ```
 
-
-
 ### 测试
 
 ```go
@@ -205,7 +204,7 @@ func TestLRU(t *testing.T) {
 }
 ```
 
-![image-20220903225607839](source/assets/images/image-20220903225607839.png)
+![image-20220903225607839](assets/images/image-20220903225607839.png)
 
 ## LFU
 
@@ -220,7 +219,7 @@ Set("2", 2)
 Set("1", 1)
 Get(1)
 Get(2)
-Set("3", 3) 
+Set("3", 3)
 Set("4", 4) // LRU 将淘汰 1，缓存链表为 4->3->2
 	    // LFU 将淘汰 3，未超出容量的时段内 1 和 2 都被使用了两次，3 仅使用一次
 ```
@@ -229,10 +228,10 @@ Set("4", 4) // LRU 将淘汰 1，缓存链表为 4->3->2
 
 依旧使用双向链表实现高效写删操作，但 LFU 淘汰原则是 **使用次数**，数据节点在链表中的位置与之无关。可按使用次数划分 **频率梯队**，数据节点使用一次就挪到高频梯队。此外维护 `minFreq` 表示最低梯队，维护 2 个哈希表：
 
-- `map[freq]*List`  各频率及其链表
-- `map[key]*Node` 实现数据节点的 O(1) 读 
+- `map[freq]*List` 各频率及其链表
+- `map[key]*Node` 实现数据节点的 O(1) 读
 
-![image-20230218171318312](source/assets/images/image-20230218171318312.png)
+![image-20230218171318312](assets/images/image-20230218171318312.png)
 
 双链表存储缓存数据：
 
@@ -249,8 +248,6 @@ type List struct {
 	size       int
 }
 ```
-
-
 
 ### LFU 操作细节
 
@@ -347,7 +344,7 @@ func (c *LFUCache) Set(k string, v interface{}) {
 func TestLFU(t *testing.T) {
 	c := NewLFUCache(2)
 	c.Set(K1, 1)           // 1:K1
-	c.Set(K2, 2)           // 1:K2->K1	
+	c.Set(K2, 2)           // 1:K2->K1
 	fmt.Println(c.Get(K1)) // 1:K2 2:K1 // 1
 	c.Set(K3, 3)           // 1:K3 2:K1
 	fmt.Println(c.Get(K2)) // -1
@@ -358,7 +355,7 @@ func TestLFU(t *testing.T) {
 }
 ```
 
-![image-20220903225519226](source/assets/images/image-20220903225519226.png)
+![image-20220903225519226](assets/images/image-20220903225519226.png)
 
 ## 总结
 
@@ -366,6 +363,6 @@ func TestLFU(t *testing.T) {
 
 在算法直接实现难度较大的情况下，不妨采用空间换时间，或时间换空间的策略来间接实现。要充分利用各种数据结构的优点并互补，比如链表加哈希表就实现了任意操作 O(1) 复杂度的复合数据结构。
 
-
 ---
-![20200131220947.png](source/assets/images/leunggeorge.github.io-image-9o2i34.png)
+
+![20200131220947.png](assets/images/leunggeorge.github.io-image-9o2i34.png)
