PUSH NOTE : 跟大师学语文-文章作法.md

--- a/source/_posts/跟大师学语文-文章作法.md
+++ b/source/_posts/跟大师学语文-文章作法.md
@@ -12,7 +12,9 @@ title: 跟大师学语文-文章作法
 comments: true
 ---
 
-> 一本指导如何写作的好书。
+| 时间         | 备注                |
+| ---------- | ----------------- |
+| 2024-08-22 | 开始阅读。一本指导如何写作的好书。 |
 
 法则没用而有用，就在这一点，作文法的真价值，也就在这一点。
 
@@ -20,7 +22,7 @@ comments: true
 
 文章有内容和形式两方面。所谓好文章，就是达意表情。
 
-怎样作法，最要紧的基本条件有两个：（1）真实；（2）明确。
+怎样作法，最要紧的基本条件有两个：真实、明确。
 **（1）真实**
 文章是传达自己意思和情感给别人的东西。
 “情者，文之经；辞者，理之纬；经正而后纬成，理定而后辞畅；此立文之本也。”
@@ -110,3 +112,54 @@ comments: true
 ## 第二节 记事文和叙事文的混合
 
 文体的分类原只是为说明便利和作者自身态度不同，实际上并没有纯粹属于某种体裁的文字，记事文和叙事文虽因所记述的对象不同而有区别，在一篇关于事物的记述的文字中，总是相互混杂的。
+
+## 第三节 叙事文的要素
+
+叙事文既是记述现象的，所以也有四个要素：（一）现象的主体，（二）现象的演变，（三）现象发生的时间，（四）现象发生的场所。
+
+## 第四节 叙事文的主想
+
+材料选择的标准：除适切题目和注意特色以外，还因文目的而定。这个目的在叙事文中就是主想，大体有三类：
+（一）以授与教训为主。例如传记等。
+（二）以授与知识为主。例如历史等。
+（三）以授与趣味为主。例如小说等。
+总括一句，第一类以善为主，第二类以真为主，第三类以美为主。
+
+但有一点需要注意，就是同一材料应当取舍不是材料本身的重要与否的问题，而是与主想的关系重要与否的问题。
+
+## 第五节 叙事的观察点
+
+叙事文所叙述的材料，不但是从作者自己经验得来，还有从别人的传说或书籍的记载得来的。
+
+叙事文的观察点，就是作者所站的地位，可分为三种：
+（一）居于发动者一边
+（二）居于受动者一边
+（三）居于旁观者一边
+作叙事文须确定一种的观察点，全篇统一，不应摇动。通常的叙事文，以居于旁观者的地位的居多。
+
+> 亦非绝对，参考《观察点的变动》
+
+叙事文因观察点不同，对于同一材料，可作成各方面的文字。这步功夫，在学作叙事文上很重要。有这样功夫的作者，对于一件事就能理解要从哪方面叙述才省事。
+
+## 第六节 观察点的变动
+
+照前节所说，叙事文的观察点不应变更，使文气一致而不散漫、冗繁。但这只是一般的原则，在长篇的或复杂的叙事文，要将各方面的情形都表现得适当，却不得不变动。
+
+叙述一件事，哪几方面的关系重要，以及哪些应当表现，哪些不应当表现，全依靠事件的性质，由作者自己的意见去判断，没有一个简明的标准。
+
+## 第七节 叙事文的流动
+
+叙事文的对象是事物的现象的展开，这展开的情形被叙述成文字的时候，就成了文字上的流动。现象的展开不止，文字的流动也就仍然继续，所以流动是叙事文的特色。
+
+- 快的叙事文，以叙述事件的轮廓为目的；
+- 慢的叙事文，以叙述事件的情况为目的。
+
+## 第八节 叙事文流动的中止
+
+叙事文的特色既然在流动，所以不但这流动须快慢适当，还须慎防中止。所谓流动中止，就是由时间的、动的叙事文，突然转到冗长的、空间的、静的记事文；或插入说明，使动态一时停滞。
+
+## 第九节 叙事文流动的顺逆
+
+叙事文是把事物的变化来展开的，所以流动的方向也有两种：第一种，照那变化自然的顺序，依次叙述，这是顺的；第二种，因为要叙明变化的前因后果，或并行的事件，不能全然依照自然的顺序而要有所颠倒，这是逆的。
+
+> End
