PUSH NOTE : 跟大师学语文-文章作法.md

--- a/source/_posts/跟大师学语文-文章作法.md
+++ b/source/_posts/跟大师学语文-文章作法.md
@@ -12,8 +12,8 @@ title: 跟大师学语文-文章作法
 comments: true
 ---
 
-| 时间         | 备注                |
-| ---------- | ----------------- |
+| 时间       | 备注                               |
+| ---------- | ---------------------------------- |
 | 2024-08-22 | 开始阅读。一本指导如何写作的好书。 |
 
 法则没用而有用，就在这一点，作文法的真价值，也就在这一点。
@@ -161,5 +161,94 @@ comments: true
 ## 第九节 叙事文流动的顺逆
 
 叙事文是把事物的变化来展开的，所以流动的方向也有两种：第一种，照那变化自然的顺序，依次叙述，这是顺的；第二种，因为要叙明变化的前因后果，或并行的事件，不能全然依照自然的顺序而要有所颠倒，这是逆的。
+
+# 第四章 说明文
+
+## 第一节 说明文的意义
+
+解说事物，剖释事理，阐明意象；以便使人得到关于事、事理或意象的知识的文字，称为说明文。
+
+说明文和科学的记事文最重要的区别：对象的范围不同。科学的记事文比较具体；说明文比较抽象。
+
+## 第二节 说明文的用途和题式
+
+说明文本来是用较浅近明了易于理解的文字去解明事物或事理，使它的关系明了，范围确定，意义清晰，给人以关于该事物或事理的普遍的正确的知识，所以用途很广。
+
+说明文题式通常有疑问式和直述式两种。
+
+## 第三节 说明文的条件
+
+说明文最简单的形式，就是单语的定义：复杂的说明文，无非是单语的定义的集合和它们的引申。
+
+要想使人明了，说明文作法的条件须加多：
+（一）所属的种类
+（二）所具的特色
+（三）所含的种类
+（四）显明的实例
+（五）对称和疑似
+（六）语义的限定
+
+> [!PDF|yellow] [跟大师学语文-文章作法, p.51](1%20Project/book/文章作法/资料/跟大师学语文-文章作法.pdf#page=51&color=yellow)
+>
+> > 上述各项，是说明作文法上的要件，现在以“文学”为题应用各要件，示范如下：
+> > 文学是一种艺术（一），换句话说，就是以文字做成的艺术（二）。纯粹的文学通常不以日用为目的（五），因体裁上有小说，诗歌，戏曲等分别（三）。《红楼梦》是小说，《长恨歌》是诗歌，《西厢记》是戏曲（四）。
+> > 文学不是普通的文字，也不是科学（六）。韩愈的《原道》，王船山的《读通鉴论》等，不是文学，物理学讲义，化学教科书等，也不是文学（四）。
+> > 我国古来，凡是文字都称文学，但是现在的所谓文学完全是小说，诗歌，戏曲的总称，和从前的意义是不同的（六）。
+
+## 第四节 条件的省略
+
+说明文原是为未知事物的人作的。但遇某部分确已非常明了的时候，也可以省略。
+（1）普通的省略：容易明了而不至误解的事物，或只以使人知道一个概要的，都可以只说大概。
+（2）因比较而省略的：利用读者所已知的事物，两相比较以说明的时候，和已知事物相同的条件，就可省略，这是常用的省略法。
+
+# 第五章 议论文
+
+## 第一节 议论文的意义
+
+发挥自己的主张，批评别人的意见，以使人承认自己的目的文字，称为议论文。
+
+与说明文的区别：
+
+- 第一是目的不同。说明文的目的是在使别人有所知，议论文不但要使人有所知，还要有所信。
+- 第二性质不同。试就两者的题式看就可明了。说明文大概用单语为题。论论文的题目原是文章的根本主张的概括的缩写，所以表面虽是单语，内容依然是命题。
+- 第三是态度不同。说明文偏客观，议论文恰好相反。
+
+## 第二节 命题
+
+断定用言语或文字表示出来称为命题。
+
+作议论文的第一步，就是认定自己所要提出的命题。命题确定了，然后加以证明。所要注意的就是保持论点，不要变更，使议论出了本命题范围以外。
+
+## 第三节 证明
+
+命题既经认定，就应当加以证明，证明可分两种。
+（一）直接证明。即是对于一种主张，找出积极的理由来证明。
+（二）间接证明。就是所谓反证，对于一种主张，先证明对方面的谬误，使自己所说的牢固。
+大概，发表自己的主张，不能不有直接的证明；反驳他人的议论，间接证明最有用。
+
+## 第四节 演绎法、归纳法和类推法
+
+演绎法、归纳法和类推法，是论证的基本方法。要知道详细，须求之于论理学。
+（一）演绎法。用含义比较广括的命题做基础，来论证含义较狭的命题，这是演绎法。
+演绎法最基本的形式，通常称为三段论（大前提、小前提、断案）。
+
+演绎法的议论，全以两前提做基础，所以如前提中有一个不稳固，全论就不免谬误。
+
+繁复的议论文大概就是由许多三段论法联合而成的。
+
+（二）归纳法。归纳法和演绎法恰好相反，是集合部份而论证全体的论法。
+
+归纳法中应遵守的两个条件：
+
+- 部份事件的集合须普遍而且没有反例；
+- 有明确的因果关系。
+  这两个条件如果能满足一个，大概可以认为没有错误。最有力的归纳法，是第一、第二两个条件都能满足的。
+
+（三）类推法。根据已知的事例而推断出相类的事例的方法，这是类推法。
+
+类推法就遵守的两个条件：
+
+- 所举的类似点，须是事物的固有性，而不是偶有性；
+- 被推的事物须不含有与断案矛盾的性质。
 
 > End
