PUSH NOTE : 01. 诗词歌赋《合集》.md

--- a/source/_posts/01. 诗词歌赋《合集》.md
+++ b/source/_posts/01. 诗词歌赋《合集》.md
@@ -14,6 +14,8 @@ comments: true
 description: 
 ---
 
+# 诗词歌赋
+
 ## 《前出师表》——诸葛亮
 
 先帝创业未半而中道崩殂，今天下三分，益州疲弊，此诚危急存亡之秋也。然侍卫之臣不懈於内，忠志之士忘身於外者，盖追先帝之殊遇，欲报之於陛下也。诚宜开张圣（德），以光先帝遗德，恢弘志士之气，不宜妄自菲薄，引喻失义，以塞忠谏之路也。宫中府中俱为一体，陟罚臧否，不宜异同。若有作奸犯科及为忠善者，宜付有司论其刑赏，以昭陛下平明之理，不宜偏私，使内外异法也。侍中、侍郎郭攸之、费祎、董允等，此皆良实，志虑忠纯，是以先帝简拔以遗陛下。愚以为宫中之事，事无大小，悉以咨之，然后施行，必能裨补阙漏，有所广益。将军向宠，性行淑均，晓畅军事，试用於昔日，先帝称之曰能，是以众议举宠为督。愚以为营中之事，悉以咨之，必能使行陈和睦，优劣得所。亲贤臣，远小人，此先汉所以兴隆也；亲小人，远贤臣，此后汉所以倾颓也。先帝在时，每与臣论此事，未尝不叹息痛恨於桓、灵也。侍中、尚书、长史、参军，此悉贞良死节之臣，原陛下亲之信之，则汉室之隆，可计日而待也。
