PUSH NOTE : 202405241816 【万字长文】消息队列（MQ）选型及常见问题看这一篇就够了.md

--- a/source/_posts/202405241816 【万字长文】消息队列（MQ）选型及常见问题看这一篇就够了.md
+++ b/source/_posts/202405241816 【万字长文】消息队列（MQ）选型及常见问题看这一篇就够了.md
@@ -1,5 +1,4 @@
 ---
-uuid: 414147a7-691d-11ef-aa45-1da24f09c467
 tags:
   - 随笔
   - note
@@ -42,6 +41,7 @@ comments: true
 ### 2.1.1 系统框架
 
 ![](assets/images/79ac75632b17020a25f4913a985c385d_MD5.png)
+
 一个 Kafka 集群由多个 Broker 和一个 ZooKeeper 集群组成，Broker 作为 Kafka 节点的服务器。同一个消息主题 Topic 可以由多个分区 Partition 组成，分区物理存储在 Broker 上。负载均衡考虑，同一个 Topic 的多个分区存储在多个不同的 Broker 上，为了提高可靠性，每个分区在不同的 Broker 会存在副本。
 
 [ZookKeeper](notes/timenotes/2024/05/ZooKeeper) 是一个分布式开源的应用程序协调服务，可以实现统一命名服务、状态同步服务、集群管理、分布式应用配置项的管理等工作。Kafka 里的 ZooKeeper 主要有一下几个作用：
@@ -830,4 +830,4 @@ Kafka 与 Pulsar 都是腾讯云主打的消息队列中间件，都具有高性
 7. [消息队列基本原理和选型对比](https://cloud.tencent.com/developer/article/2083716)
 8. [消息队列 20 年：腾讯专家沉淀的 MQ 设计精要](https://cloud.tencent.com/developer/article/2306748)
 9. [Kafka 文件存储机制那些事](https://www.open-open.com/lib/view/open1421150566328.html)
-10. [消息队列原理和选型：Kafka、RocketMQ、RabbitMQ 和 ActiveMQ](notes/timenotes/2024/05/202405241817%20消息队列原理和选型：Kafka、RocketMQ、RabbitMQ%20和%20ActiveMQ.md)
+11. [消息队列原理和选型：Kafka、RocketMQ、RabbitMQ 和 ActiveMQ](https://juejin.cn/post/7096095180536676365)
