PUSH NOTE : 9. 解耦：消息队列.md

--- a/source/_posts/9. 解耦：消息队列.md
+++ b/source/_posts/9. 解耦：消息队列.md
@@ -1,9 +1,9 @@
 ---
-uuid: 6a4c2880-6b26-11ef-9128-07afe80d8cb5
 tags:
   - blog
   - 性能优化
   - 总结
+  - 消息队列
 share: "true"
 categories:
   - 系统优化
@@ -12,9 +12,9 @@ date: 2024-08-22,12:27
 comments: true
 ---
 
-## 解耦：消息队列
+# 解耦：消息队列
 
-**业务场景：**
+## 业务场景
 
 消息队列是重要的分布式系统组件，在高性能、高可用、低耦合等系统架构中扮演着重要作用。可用于异步通信、削峰填谷、解耦系统、数据缓存等多种业务场景。
 
@@ -22,10 +22,13 @@ comments: true
 
 常用的消息队列实现有：Kafka、RabbitMQ、RocketMQ、Pulsar、ActiveMQ 等等。关于消息队列选型可参考：[《【万字长文】消息队列（MQ）选型及常见问题看这一篇就够了》](https://liangyuanzheng.com/202405241816-%E3%80%90%E4%B8%87%E5%AD%97%E9%95%BF%E6%96%87%E3%80%91%E6%B6%88%E6%81%AF%E9%98%9F%E5%88%97%EF%BC%88MQ%EF%BC%89%E9%80%89%E5%9E%8B%E5%8F%8A%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98%E7%9C%8B%E8%BF%99%E4%B8%80%E7%AF%87%E5%B0%B1%E5%A4%9F%E4%BA%86.html)本节将主要介绍如何使用消息队列去解决业务上的具体问题。
 
-<!-- 内部投稿时，换成km -->
-<!-- ⓵⓶⓷⓸⓹⓺⓻⓼⓽⓾ -->
+> 打个小广告：[《一篇文搞定消息队列选型》](https://mp.weixin.qq.com/s?__biz=MzI2NDU4OTExOQ==&mid=2247681967&idx=1&sn=d76b0cc6b3a46789eec45959052dd2b2&chksm=ebfb50053edefef093cb412c7baddd8fced0fa63c5eb87e87998e37500a30645191c7e30c44f&mpshare=1&scene=1&srcid=0906VNnWsB2eJMfSVMk4Ni1J&sharer_shareinfo=ae87ed8ed3b12f8cfab90dd7cd2211e3&sharer_shareinfo_first=ae87ed8ed3b12f8cfab90dd7cd2211e3&version=4.1.28.99511&platform=mac#rd)
 
-### 解耦系统
+<!-- 内部投稿时，换成km -->
+
+## 案例
+
+**⓵ 解耦系统**
 
 以电商系 IT 架构为例。在传统的紧耦架构中，客户下单后，订单系统收到请求后，调用库存系统减库存。这种模式有如下缺点：
 
@@ -40,15 +43,13 @@ comments: true
 
 > 电商网站中，新的用户注册时，需要将用户的信息保存到数据库中，同时还需要额外发送注册的邮件通知、以及短信注册码给用户。
 
-### 解耦、广播、缓冲、异步、冗余
-
-### 异步通信
+**⓶ 异步通信**
 
 电商网站中，新的用户注册时，需要将用户的信息保存到数据库中，同时还需要额外发送注册的邮件通知、以及短信注册码给用户。
 
 传统的做法有两种：**串行的方式、并行的方式。**
 
-**⓵ 串行的方式**
+**串行的方式：**
 
 将注册信息写入数据库后，先发送邮件通知，再发送短信提醒。以上三个任务全部完成后，返回给客户端。
 
@@ -56,7 +57,7 @@ comments: true
 
 <center><font color="#7f7f7f">图：串行发送</font></center>
 
-**⓶ 并行的方式**
+**并行的方式：**
 
 将注册信息写入数据库成功后，发送注册邮件的同时，发送注册短信。以上三个过程完成后，返回给客户端。与串行的差别是并行的方式可以缩短处理时间。
 
@@ -64,7 +65,7 @@ comments: true
 
 <center><font color="#7f7f7f">图：并行发送</font></center>
 
-**⓷ 消息队列**
+**消息队列：**
 
 引入消息队列后，非关键路径（通知部分）就可以异步处理了，从而实现快速响应：
 
@@ -73,7 +74,7 @@ comments: true
 
 ![](assets/images/cdfe1c9637a9732de8084e6be3ead7ef_MD5.png)
 
-### 削峰填谷
+**⓷ 削峰填谷**
 
 像双十一、手机预约抢购等对 IO 时延敏感的业务场景，当外部请求超过系统负载时，如果系统没有过载保护策略，很可能会被短时的峰值流量冲垮。
 
@@ -87,7 +88,7 @@ comments: true
 
 上图中，黄色的部分代表超出消息处理能力的部分。把黄色部分的消息平均到之后的空闲时间去处理，这样既可以保证系统负载处在一个稳定的水位，又可以尽可能地处理更多消息。通过配置流控规则，可以达到消息匀速处理的效果。
 
-### 广播
+**⓸ 广播**
 
 假如，客户购买商品后，子系统会有以下动作：
 
@@ -104,17 +105,17 @@ comments: true
 
 ![](assets/images/fdfed2c07c5d8fd35a71c5afd616e4f5_MD5.png)
 
-### 延时队列
+**⓹ 延时队列**
 
 消息队列可以实现一些延时操作，如定时调度、超时处理等。
 
-**⓵ 分布式定时调度**
+**分布式定时调度：**
 
 在需要精细化调度的场景中，如每 2 分钟触发一次消息推送。传统基于数据库的定时调度方案在分布式场景下（特别是数据量大的时候），性能不高，实现复杂。基于消息队列（如 RocketMQ）可以封装出类似的定时触发器：
 
 ![](assets/images/f69c3c9a03364addc2c7826288890203_MD5.gif)
 
-**⓶ 任务超时处理**
+**任务超时处理：**
 
 以购买火车票为例，我们在 12306 下单后暂未支付，订单是不会被取消的。而是等待一段时间后（如 30 min），系统才会关闭未支付的订单。可以使用消息队列实现超时任务检查：
 
@@ -124,6 +125,16 @@ comments: true
 
 - 精度高、开发门槛低：基于消息通知方式不存在定时阶梯间隔。可以轻松实现任意精度事件触发，无需业务去重。
 - 高性能可扩展：传统的数据库扫描方式较为复杂，需要频繁调用接口扫描，容易产生性能瓶颈。消息队列具有高并发和水平扩展的能力。
+
+**其他：**
+
+延迟消息的使用场景很多，比如异常检测重试、订单超时取消等，例如：
+
+- 服务请求异常，需要将异常请求放到单独的队列，隔 5 分钟后进行重试；
+- 用户购买商品，但一直处于未支付状态，需要定期提醒用户支付，超时则关闭订单；
+- 面试或者会议预约，在面试或者会议开始前半小时，发送通知再次提醒。
+
+## 小结
 
 **谚云：All problems in computer science can be solved by another level of indirection.**
 
