PUSH NOTE : 跟大师学语文-文章作法.md

--- a/source/_posts/跟大师学语文-文章作法.md
+++ b/source/_posts/跟大师学语文-文章作法.md
@@ -1,5 +1,4 @@
 ---
-uuid: 414147a6-691d-11ef-aa45-1da24f09c467
 tags:
   - note
   - blog
@@ -230,14 +229,15 @@ comments: true
 ## 第四节 演绎法、归纳法和类推法
 
 演绎法、归纳法和类推法，是论证的基本方法。要知道详细，须求之于论理学。
-（一）演绎法。用含义比较广括的命题做基础，来论证含义较狭的命题，这是演绎法。
+
+**（一）演绎法**。用含义比较广括的命题做基础，来论证含义较狭的命题，这是演绎法。
 演绎法最基本的形式，通常称为三段论（大前提、小前提、断案）。
 
 演绎法的议论，全以两前提做基础，所以如前提中有一个不稳固，全论就不免谬误。
 
 繁复的议论文大概就是由许多三段论法联合而成的。
 
-（二）归纳法。归纳法和演绎法恰好相反，是集合部份而论证全体的论法。
+**（二）归纳法**。归纳法和演绎法恰好相反，是集合部份而论证全体的论法。
 
 归纳法中应遵守的两个条件：
 
@@ -245,11 +245,132 @@ comments: true
 - 有明确的因果关系。
   这两个条件如果能满足一个，大概可以认为没有错误。最有力的归纳法，是第一、第二两个条件都能满足的。
 
-（三）类推法。根据已知的事例而推断出相类的事例的方法，这是类推法。
+**（三）类推法**。根据已知的事例而推断出相类的事例的方法，这是类推法。
 
 类推法就遵守的两个条件：
 
 - 所举的类似点，须是事物的固有性，而不是偶有性；
 - 被推的事物须不含有与断案矛盾的性质。
+
+## 第五节 证据的性质分类
+
+判断一件事，总是以经验做根据，而依前两节所举的方法找出证据来。由性质上，证据有种种的不同：
+
+- **（一）因果论**。以原因证明结果。
+- **（二）例证论**。将和结论相同的事例来做议论的证据。例证论以部分来推全体，或以甲部分来推乙部分。
+- **（三）譬喻论**。譬喻论和例证论相似，不过例证论是引用和结论相同的事例做证据，譬喻论是引用和结论相似的事例做证据。
+  譬喻论中所要紧的，就是两方面的类似的关系。
+- **（四）符号论**。符号论和因果论恰相反，因果论是从原因推证结果，符号论是从结果推证原因。
+
+## 第六节 各种议论的联络
+
+两种或多种议论联结起来，论证会更加可靠。
+
+## 第七节 议论文的顺序
+
+文章原无一定的成法，议论文的顺序当然也不能说有一定。
+
+以下所说的事项，不过是普通的说法：
+
+**（一）命题的位置**
+
+议论文原是对于命题的证明，命题当然是议论文的根本。
+
+在最普通的文章，应当先提出命题，使读者开首就了解全篇的主旨所在。
+
+先列命题，能使文章明晰，却是有时也不应当先将命题列出：
+第一，命题容易引起反对的时候
+第二，命题太平凡的时候
+
+**（二）证明的顺序**
+
+通常因果论应当列在前面，符号论列在最后。
+
+## 第八节 作驳论的注意
+
+议论文以推理为根据。议论原是假定有敌论存在，否则已用不到议论。从这一点说，议论文可以说是广义的驳论了。
+
+**一般的驳论：**
+
+**（一）寻求敌论的立脚点**
+
+**（二）反驳的方法**
+只须检查它违犯哪一种条件。最重要的还是对于这命题的驳击。
+
+**（三）应注意的条件**
+第一，勿助长敌论的声势
+第二，勿曲解敌论
+第三，驳论的位置。最有力的驳论最好放在中部，后半篇可用强有力的方法发挥自己的主张。
+
+以上所说的各项，并不是想取不正当的胜利，只是用来防不应当有的失败，千万不要误用。文章要动人，非有好人格、好学问做根据不可，仅从方法上着想总是末技。
+
+# 第六章 小品文
+
+## 第一节 小品文的意义
+
+从外形的长短上说，二三百乃至千字以内的短文称为小品文。
+
+小品文的内容性质全然自由，可以叙事，可以议论，可以忬情，可以写景，毫不受何等的限制。
+
+小品文，我国古来早已有了，如东坡小品就很有名；普遍所谓的“随笔”，也可看做小品文的一种。
+
+小品文虽然也有独立制作的，其实多散见于长文中。
+
+## 第二节 小品文在文章练习上的价值
+
+练习小品文，对于作长文也很有帮助，就是可以增长关于作文所需要的各种能力，所以对于文章练习上，利益很多。
+
+**（一）可为作长文的准备**
+
+**（二）能多作**
+文有三多：多读，多作，多商量。小品文内容既自由，材料又随处可得，并且因字数很少，推敲，布局都比较容易，很便于多作，能多作，作文的能力就自然进度了。
+
+**（三）能养成观察力**
+要作小品文，无论写情，写景，非注意到眼前事物的小部分，将它的特色生命来捕捉不可。细密而且锐敏的观察力，实在是文人最重要条件之一。
+
+**（四）能使文字简洁**
+
+**（五）能养成作文的兴味**
+
+## 第三节 小品文练习的机会
+
+**（一）日记**
+大体可别为二种，一是只记述行事的，一是记述内面生活的。在普通人的日记中，两种时时相合，前者重事实方面，后者重心情方面。
+
+作为练习文章计，应当注意这两个方面的的调和；一味抒述内心生活，虽嫌虚空，然帐薄式的事实的排列，也实在没有趣味。因此，最好的日记是于记述事实之中，可以表现心情的作法。
+
+**（二）书札**
+
+讲到趣味，作书札比作日记多，因为日记是独语，而书札却是对话了。
+
+书札中能兼述生活情趣，就能不呆滞而饶兴味。
+
+这里所应注意的，就是要真实无饰。若专袭套语，徒事修饰，是毫无用处的。只要能表现实生活，就可以使读者引起情趣；若徒把古人或今人的美辞丽句来套袭，就要成呆板讨厌的文字了。
+
+## 第四节 小品文作法上的注意——着眼细处
+
+小品文是记述实生活的一部分的东西，以描写部分为目的。小品文必须注目于事物细处，就极微细极琐碎的部分发现材料。
+
+小品文的材料，与其取有系统的、整个的，不如取偶发的、断片的。
+
+从许多断片的部分的材料中，选出最可寄托情感的一点拿来描写，这是作小品文的秘诀。
+
+## 第五节 小品文作法上的注意——印象的
+
+精细的部分的描写，胜于粗略的全体的叙述和说明。
+
+描写是照了事象把它来从笔端现出意思，和绘画所用的意义相同。说明固然不是描写，叙述也不是描写。
+
+简单点说：描写就是观察的表出，不会观察事物的人是断不能描写的。
+
+从另一方面看，所谓描写的就是“印象的”的意思。描写是照了所观察的事象如实写出，就是要把印象写出。
+
+我国旧式文字中往往以作者自己的态度，强迫读者同感。如叙述一悲事，结尾必用：“呜呼，岂不悲哉！”叙述一乐事，必要带“可谓乐事也已”之类。其实这是强迫读者的无理的态度。悲不悲，乐不乐，读者自会感受，何必谆谆然教诲人家呢？
+
+> 大师也很幽默啊～
+
+描写！描写！部分的精细的分写，胜于全体的叙述和说明！再进一步说，要印象的描写！
+
+---
 
 > End
