PUSH NOTE : 跟大师学语文-文章作法.md

--- a/source/_posts/跟大师学语文-文章作法.md
+++ b/source/_posts/跟大师学语文-文章作法.md
@@ -12,9 +12,9 @@ title: 跟大师学语文-文章作法
 comments: true
 ---
 
-| 时间       | 备注                               |
-| ---------- | ---------------------------------- |
-| 2024-08-22 | 开始阅读。一本指导如何写作的好书。 |
+| 时间       | 备注                                 |
+| ---------- | ------------------------------------ |
+| 2024-08-22 | 第一次阅读。一本指导如何写作的好书。 |
 
 法则没用而有用，就在这一点，作文法的真价值，也就在这一点。
 
@@ -367,9 +367,80 @@ comments: true
 
 我国旧式文字中往往以作者自己的态度，强迫读者同感。如叙述一悲事，结尾必用：“呜呼，岂不悲哉！”叙述一乐事，必要带“可谓乐事也已”之类。其实这是强迫读者的无理的态度。悲不悲，乐不乐，读者自会感受，何必谆谆然教诲人家呢？
 
-> 大师也很幽默啊～
+> 大师很幽默啊～
 
 描写！描写！部分的精细的分写，胜于全体的叙述和说明！再进一步说，要印象的描写！
+
+## 第六节 小品文作法上的注意——暗示的
+
+不要说明的和叙述的，要描写的，要印象的，暗示的；其实这许多话的根本完全相同。说明和叙述必无馀情，能描写，自然会成印象的，同时也自然是暗示的了。
+
+用了部分去縶全体，才会有馀情。
+
+暗示是小品文的生命，但所谓暗示可分两部分来看：一是笔法的暗示，一是材料的暗示。前者比较容易，后者实在很难。
+
+## 第七节 小品文作法上的注意——中心
+
+所谓中心，就是统一的意思。小品文文字数不多，如果再散漫无统一，必致减少效用，没有可以逼人的能力。
+
+没有中心，文字就要散漫无统一，散漫无统一的文字断不能动人。但所谓中心，不是一定限于事项的统一，事项虽不前后联络，只要情调心情上能统一时，仍不失为有中心的文字。
+
+中心用事项来做，或是用情调来做，是不必限定的。
+
+## 第八节 小品文作法上的注意——机智
+
+小品文如奇兵，平板的笔法断难制胜，非有机智不可。我们观察事物，有正面观察和侧面观察二种。正面观察每多平板，常不及侧面观察来得容易动人。因为正面的部分是大家都知道的，侧面的部分往往为人所不顾及的。能将人所忽略的部分从事观察，文字就容易奇警，而表现也容易成功。
+
+侧面观察就是于事物的普通光景以外，再去找出常人心中所无而实际却有的光景来；这虽有赖于观察力的周到，但基本却在机智的活动。
+
+## 第九节 实际做例和添削
+
+（一）第一步。观察第一要件在真实，观察力若尚未养成，所想象的也难免不合实际。
+
+但是眼前的材料很多，人哪里观察起呢？这本不成问题，所以发生这疑问实由于着手就想创作名文的缘故。
+
+文字的好坏本不在材料的性质，而在表现的技能。善烹调的无论用了怎样平常的原料，也能做出可口的肴馔来。世上森罗万象，一入能文者的笔端就都成了好文章了。
+
+（二）由材料到成文字
+
+写出原是容易，但要将自己所观察得的依样传给别人，使别人也起同样的心情，这却很难；并且不如此，文字就没了意义了。
+
+## 第十节 分段与选题
+
+（一）文的分段。文字的分段和句逗性质一样，同是表示区划的。最小的区划是逗，其次是句，再其次是段。有时还有空一行另写，表示此段更大的区划的。
+
+分段还是使文字易读，且使文字有序不紊。分段有长有短，原视人而不同，但大体也有一定的标准，就是要每段自成一段落。
+
+换一着眼点，就把文字分段，这是普通的标准。
+
+所要注意的就是标准只是相机而定的。
+
+分段还有把分段特别提出的意思，能使分出的文字增加强度。
+
+能适当分段也是文章技巧之一，但须入情合理，不可无谓妄饰。
+
+（二）题的选择。好的文字都是作者先有某种要写的事物或思想情感，如实写出，然后再加题目的。特别地在小品文应该如此。
+
+# 附录
+
+## 作文的基本态度
+
+要使文章能适合读者的心情，技巧的研究原是必要的，态度的注意却比技巧更加要紧。
+
+文章的态度可以分六种来说。我们执笔为文的时候，可以发生六个问题：
+**（1）为什么要作这文？** 要作这文的目的。
+**（2）在这文中所要述的是什么？** 题义，就是文章的中心思想。
+**（3）谁在作这文？** 作者的地位问题，也就是作者与读者的关系问题，再换句话说，就是要问以何种资格向人说话。
+**（4）在什么地方作这文？** 作这文的所在地也有认清的必要、或在乡村、或在都会、或在集体、或在国外，因也地方不同，态度也自须有异。
+**（5）在什么时候作这文？** 这是自己的时代观念，须得认清的。
+**（6）怎样作这文？** 上面的一种态度都认清了，然后再想作文的方法。用普通文体呢，还是用诗歌休？简单好呢，还是详细好？直说呢，还是婉说？开端怎样说？结末怎样说？先说大旨，后说理由呢，还是先说事实，后加断定？怎样才能使我的本旨显明？怎样才能免掉别人的反驳？
+
+以上六种，我以为是作为时所必须认清的态度，虽然很平凡，却必须知道，把它连接起来，就只是下面的一句话：
+**谁对了谁，为了什么，在什么地方，什么时候，用什么方法，说什么话。**
+
+用英语来说，就是 Why？What？Who？Where？When？How？六字可以称为“六 W”。
+
+## 论记叙文中作者的地位并评现今小说界的文字
 
 ---
 
