PUSH NOTE : 202405241816 【万字长文】消息队列（MQ）选型及常见问题看这一篇就够了.md

--- a/source/_posts/202405241816 【万字长文】消息队列（MQ）选型及常见问题看这一篇就够了.md
+++ b/source/_posts/202405241816 【万字长文】消息队列（MQ）选型及常见问题看这一篇就够了.md
@@ -1,5 +1,4 @@
 ---
-uuid: d260ab10-6a60-11ef-89de-916670386738
 tags:
   - 随笔
   - note
@@ -13,7 +12,7 @@ tags:
   - 分布式系统
   - pulsar
 categories:
-  - 系统优化
+  - 软件工程
 share: "true"
 title: 【万字长文】消息队列（MQ）选型及常见问题看这一篇就够了
 date: 2024-08-20,16:05
@@ -21,7 +20,7 @@ comments: true
 ---
 
 > 消息队列是重要的分布式系统组件，在高性能、高可用、低耦合等系统架构中扮演着重要作用。可用于异步通信、削峰填谷、解耦系统、数据缓存等多种业务场景。
-> 本文是关于消息队列（MQ）选型和常见问题的精心整理。在这篇文章中，我们将详细介绍消息队列的概念、作用以及如何选择适合自己需求的消息队列系统。
+> 本文系消息队列（MQ）选型和常见问题的精心整理。在这篇文章中，我们将详细介绍消息队列的概念、作用以及如何选择适合自己需求的消息队列系统。
 
 ![](assets/images/6b66a93e09b8b0ddb2a01a8be1af5603_MD5.png)
 
@@ -160,7 +159,7 @@ RabbitMQ 基于 AMQP 协议来实现，主要由 Exchange 和 Queue 两部分组
 
 **Connection**：在 Broker 和客户端之间的 TCP 连接；
 
-**Channel**：信道。Broker 和客户端只有 tcp 连接是不能发送消息的，必须创建信道。AMQP 协议规定只有通过 Channel 才能执行 AMQP 命令。一个 Connection 可以包含多个 Channel。之所以需要建立 Channel，是因为每个 TCP 连接都是很宝贵的。如果每个客户端、每个线程都需要和 Broker 交互，都需要维护一个 TCP 连接的话是机器耗费资源的，一般建议共享 Connection。RabbitMQ 不建议客户端线程之前共享 Channel，至少保证同一 Channel 发小消息是穿行的；
+**Channel**：信道。Broker 和客户端只有 tcp 连接是不能发送消息的，必须创建信道。AMQP 协议规定只有通过 Channel 才能执行 AMQP 命令。一个 Connection 可以包含多个 Channel。之所以需要建立 Channel，是因为每个 TCP 连接都是很宝贵的。如果每个客户端、每个线程都需要和 Broker 交互，都需要维护一个 TCP 连接的话是机器耗费资源的，一般建议共享 Connection。RabbitMQ 不建议客户端线程之前共享 Channel，至少保证同一 Channel 发送消息是串行的；
 
 **Command**：AMQP 命令，客户端通过 Command 来完成和 AMQP 服务器的交互。
 
@@ -831,4 +830,4 @@ Kafka 与 Pulsar 都是腾讯云主打的消息队列中间件，都具有高性
 7. [消息队列基本原理和选型对比](https://cloud.tencent.com/developer/article/2083716)
 8. [消息队列 20 年：腾讯专家沉淀的 MQ 设计精要](https://cloud.tencent.com/developer/article/2306748)
 9. [Kafka 文件存储机制那些事](https://www.open-open.com/lib/view/open1421150566328.html)
-11. [消息队列原理和选型：Kafka、RocketMQ、RabbitMQ 和 ActiveMQ](https://juejin.cn/post/7096095180536676365)
+10. [消息队列原理和选型：Kafka、RocketMQ、RabbitMQ 和 ActiveMQ](https://juejin.cn/post/7096095180536676365)
