--- a/source/_posts/20241023115736 Linux dig 命令.md
+++ b/source/_posts/20241023115736 Linux dig 命令.md
@@ -7,9 +7,11 @@ categories:
 date: 2024-10-23,11:57
 description: 
 share: "true"
-title: Linux dig 命令
+title: Linux dig 命令：查询单个域名的 DNS 信息
 comments: true
 ---
+
+> https://www.cnblogs.com/sparkdev/p/7777871.html
 
 Dig 命令主要用来从 DNS 域名服务器查询主机地址信息。
 
