PUSH NOTE : 20241023115736 Linux dig 命令.md

--- a/source/_posts/20241023115736 Linux dig 命令.md
+++ b/source/_posts/20241023115736 Linux dig 命令.md
@@ -11,7 +11,7 @@ title: Linux dig 命令：查询单个域名的 DNS 信息
 comments: true
 ---
 
-> https://www.cnblogs.com/sparkdev/p/7777871.html
+> 本文系外部转帖，[查看原文](https://www.cnblogs.com/sparkdev/p/7777871.html)
 
 Dig 命令主要用来从 DNS 域名服务器查询主机地址信息。
 
