PUSH NOTE : 20241024 - 域名系统（DNS）.md

--- a/source/_posts/20241024 - 域名系统（DNS）.md
+++ b/source/_posts/20241024 - 域名系统（DNS）.md
@@ -12,9 +12,13 @@ title: 域名系统（DNS）
 comments: true
 ---
 
+# 域名系统
+
 域名系统（英语：Domain Name System，缩写：DNS）是互联网的一项服务。它作为将域名和 IP 地址相互映射的一个分布式数据库，能够使人更方便地访问互联网。
 
 DNS 最早于 1983 年由保罗·莫卡派乔斯（Paul Mockapetris）发明。
+
+# 资源记录类型
 
 DNS 系统中，常见的资源记录类型有：
 
@@ -33,3 +37,9 @@ DNS 系统中，常见的资源记录类型有：
 | SRV   | 服务位置记录。用于定义提供特定服务的服务器的位置，如主机（hostname），端口（port number）等。                               |
 | NS    | 域名服务器记录。用来指定该域名由哪个 DNS 服务器来进行解析。                                                                 |
 | NAPTR | 它提供了正则表达式方式去映射一个域名。NAPTR 记录非常著名的一个应用是用于 ENUM 查询。                                        |
+
+# 域名解析过程
+
+![](assets/images/b0c3c5ef54793968ac81dffe66314afd_MD5.png)
+
+- [域名系统](https://zh.wikipedia.org/wiki/%E5%9F%9F%E5%90%8D%E7%B3%BB%E7%BB%9F)
