PUSH NOTE : 01. 诗词歌赋《合辑》.md

--- a/source/_posts/01. 诗词歌赋《合辑》.md
+++ b/source/_posts/01. 诗词歌赋《合辑》.md
@@ -1,5 +1,4 @@
 ---
-uuid: 4b49cbc1-8f5e-11ef-9b33-d978bf868f38
 tags:
   - blog
   - 诗词
@@ -1369,6 +1368,12 @@ https://so.gushiwen.cn/shiwenv_6c1ea9b7dd44.aspx
 嗟夫！予尝求古仁人之心，或异二者之为，何哉？不以物喜，不以己悲。居庙堂之高，则忧其民；处江湖之远，则忧其君。是进亦忧，退亦忧；然则何时而乐耶？其必曰：“先天下之忧而忧，后天下之乐而乐”欤！噫！微斯人，吾谁与归？
 
 时六年九月十五日。
+
+## 诫子书
+
+诸葛亮·两汉
+
+夫君子之行，静以修身，俭以养德。非淡泊无以明志，非宁静无以致远。夫学须静也，才须学也，非学无以广才，非志无以成学。淫慢则不能励精，险躁则不能治性。年与时驰，意与日去，遂成枯落，多不接世，悲守穷庐，将复何及！
 
 ---
 
