--- a/source/_posts/20240727 热爱生活.md
+++ b/source/_posts/20240727 热爱生活.md
@@ -1,5 +1,4 @@
 ---
-uuid: 92bfa95e-4bdb-11ef-aa31-6763f8fd0a83
 tags:
   - blog
 share: "true"
@@ -7,6 +6,7 @@ categories:
   - essay
 title: 热爱生活
 date: 2024-07-27
+description: 
 ---
 生活中只有一种英雄主义，那就是在认清生活真相之后依然热爱生活。
 
