PUSH NOTE : 5. 空间换时间思想：降低耗时.md

--- a/source/_posts/5. 空间换时间思想：降低耗时.md
+++ b/source/_posts/5. 空间换时间思想：降低耗时.md
@@ -1,5 +1,4 @@
 ---
-uuid: 414147a1-691d-11ef-aa45-1da24f09c467
 tags:
   - 性能优化
   - 总结
@@ -12,9 +11,13 @@ date: 2024-08-15
 comments: true
 ---
 
-## 空间换时间思想：降低耗时
+# 空间换时间思想：降低耗时
+
+## 业务场景
 
 空间换时间思想是一种常见的优化策略，它通过增加额外的空间（内存、缓存等）来减少程序的执行时间。这种思想的基本原理是通过预先计算、缓存或索引等方式，将计算或数据存储在更快的存储介质中，以减少访问时间和计算时间。这样可以避免重复计算或频繁的磁盘访问，从而提高程序的执行效率。
+
+## 案例
 
 缓存优化是性能优化中的一个重要环节，它可以显著提高系统的响应速度和吞吐量。常见的应用有：
 
@@ -22,6 +25,8 @@ comments: true
 
 - 分布式缓存：[Redis](https://github.com/redis/redis)、[Memcached](https://github.com/memcached/memcached)
 - 本地缓存组件：[bigcache](https://github.com/allegro/bigcache)
+
+## 小结
 
 **谚云：彼亦一是非，此亦一是非**
 
