PUSH NOTE : 9. 解耦：消息队列.md

--- a/source/_posts/9. 解耦：消息队列.md
+++ b/source/_posts/9. 解耦：消息队列.md
@@ -1,5 +1,4 @@
 ---
-uuid: 4b49a4b1-8f5e-11ef-9b33-d978bf868f38
 tags:
   - blog
   - 性能优化
@@ -21,15 +20,11 @@ comments: true
 
 ![](assets/images/6b66a93e09b8b0ddb2a01a8be1af5603_MD5.png)
 
-常用的消息队列实现有：Kafka、RabbitMQ、RocketMQ、Pulsar、ActiveMQ 等等。关于消息队列选型可参考：[《【万字长文】消息队列（MQ）选型及常见问题看这一篇就够了》](https://liangyuanzheng.com/202405241816-%E3%80%90%E4%B8%87%E5%AD%97%E9%95%BF%E6%96%87%E3%80%91%E6%B6%88%E6%81%AF%E9%98%9F%E5%88%97%EF%BC%88MQ%EF%BC%89%E9%80%89%E5%9E%8B%E5%8F%8A%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98%E7%9C%8B%E8%BF%99%E4%B8%80%E7%AF%87%E5%B0%B1%E5%A4%9F%E4%BA%86.html)本节将主要介绍如何使用消息队列去解决业务上的具体问题。
-
-> 打个小广告：[《一篇文搞定消息队列选型》](https://mp.weixin.qq.com/s?__biz=MzI2NDU4OTExOQ==&mid=2247681967&idx=1&sn=d76b0cc6b3a46789eec45959052dd2b2&chksm=ebfb50053edefef093cb412c7baddd8fced0fa63c5eb87e87998e37500a30645191c7e30c44f&mpshare=1&scene=1&srcid=0906VNnWsB2eJMfSVMk4Ni1J&sharer_shareinfo=ae87ed8ed3b12f8cfab90dd7cd2211e3&sharer_shareinfo_first=ae87ed8ed3b12f8cfab90dd7cd2211e3&version=4.1.28.99511&platform=mac#rd)
-
-<!-- 内部投稿时，换成km -->
+常用的消息队列实现有：Kafka、RabbitMQ、RocketMQ、Pulsar、ActiveMQ 等等。关于消息队列选型可参考：[《【万字长文】消息队列（MQ）选型及常见问题看这一篇就够了》](https://km.woa.com/articles/show/611417)本节将主要介绍如何使用消息队列去解决业务上的具体问题。
 
 ## 案例
 
-**⓵ 解耦系统**
+### **⓵ 解耦系统**
 
 以电商系 IT 架构为例。在传统的紧耦架构中，客户下单后，订单系统收到请求后，调用库存系统减库存。这种模式有如下缺点：
 
@@ -44,7 +39,7 @@ comments: true
 
 > 电商网站中，新的用户注册时，需要将用户的信息保存到数据库中，同时还需要额外发送注册的邮件通知、以及短信注册码给用户。
 
-**⓶ 异步通信**
+### **⓶ 异步通信**
 
 电商网站中，新的用户注册时，需要将用户的信息保存到数据库中，同时还需要额外发送注册的邮件通知、以及短信注册码给用户。
 
@@ -75,7 +70,7 @@ comments: true
 
 ![](assets/images/cdfe1c9637a9732de8084e6be3ead7ef_MD5.png)
 
-**⓷ 削峰填谷**
+### **⓷ 削峰填谷**
 
 像双十一、手机预约抢购等对 IO 时延敏感的业务场景，当外部请求超过系统负载时，如果系统没有过载保护策略，很可能会被短时的峰值流量冲垮。
 
@@ -89,7 +84,7 @@ comments: true
 
 上图中，黄色的部分代表超出消息处理能力的部分。把黄色部分的消息平均到之后的空闲时间去处理，这样既可以保证系统负载处在一个稳定的水位，又可以尽可能地处理更多消息。通过配置流控规则，可以达到消息匀速处理的效果。
 
-**⓸ 广播**
+### **⓸ 广播**
 
 假如，客户购买商品后，子系统会有以下动作：
 
@@ -106,7 +101,7 @@ comments: true
 
 ![](assets/images/fdfed2c07c5d8fd35a71c5afd616e4f5_MD5.png)
 
-**⓹ 延时队列**
+### **⓹ 延时队列**
 
 消息队列可以实现一些延时操作，如定时调度、超时处理等。
 
