PUSH NOTE : 8. 压缩：提速提效.md

--- a/source/_posts/8. 压缩：提速提效.md
+++ b/source/_posts/8. 压缩：提速提效.md
@@ -1,5 +1,4 @@
 ---
-uuid: 4b49a4b0-8f5e-11ef-9b33-d978bf868f38
 tags:
   - 性能优化
   - 总结
@@ -20,7 +19,7 @@ comments: true
 
 ## 案例
 
-**⓵ 压缩算法在 HTTP 协议中的应用**
+### **⓵ 压缩算法在 HTTP 协议中的应用**
 
 压缩应我们身边。
 
@@ -38,7 +37,7 @@ Content-Encoding 的作用包括：
 
 对于 REST API 的开发者来说，资源表示压缩是一项非常重要的技术，可以帮助我们提高 API 的性能，减少响应大小，提升用户体验。
 
-**⓶ 压缩算法在构建部署项目的一次实践**
+### **⓶ 压缩算法在构建部署项目的一次实践**
 
 **先说结论：压缩平均节省了 90% 的时间。**
 
