PUSH NOTE : 7. 安全思想：漏洞防护.md

--- a/source/_posts/7. 安全思想：漏洞防护.md
+++ b/source/_posts/7. 安全思想：漏洞防护.md
@@ -1,5 +1,4 @@
 ---
-uuid: 414147a3-691d-11ef-aa45-1da24f09c467
 tags:
   - 性能优化
   - 总结
@@ -12,15 +11,19 @@ date: 2024-08-20,11:49
 comments: true
 ---
 
-## 安全思想：漏洞防护
+# 安全思想：漏洞防护
 
-[OWASP](http://www.owasp.org.cn/OWASP-CHINA/) 是一个开源的、非盈利的全球性安全组织，致力于应用软件的安全研究。
+## 业务场景
 
-### Go 安全编码实践指南
+安全思想是指在设计、开发和维护计算机系统和网络时，将安全性作为首要考虑的原则和理念。它强调在整个系统生命周期中，从设计阶段到实施和运行阶段，都要考虑安全性，并采取相应的措施来保护系统免受恶意攻击和数据泄露的威胁。
+
+## 案例
+
+### **⓵ Go 安全编码实践指南**
 
 采用安全编码实践，可以提高应用程序的安全性，减少潜在的安全风险，并为用户提供更可靠和安全的体验。
 
-本节内容摘自 [《Go-安全编码实践指南》](http://www.owasp.org.cn/OWASP-CHINA/go-webapp-scp-cn.pdf)
+本节内容摘自 [OWASP](http://www.owasp.org.cn/OWASP-CHINA/) 的 [《Go-安全编码实践指南》](http://www.owasp.org.cn/OWASP-CHINA/go-webapp-scp-cn.pdf)
 
 ![](assets/images/21f9faba441126a2ba22d49be4625b2c_MD5.png)
 
@@ -33,7 +36,7 @@ comments: true
 - [《OWASP 低代码十大安全风险》](1%20Project/腾讯/智影/浅析服务端优化/智影：浅析后端接口优化实战（20240331）/资料/OWASP低代码十大安全风险.pdf)
 - [《2021 OWASP TOP 10》](http://www.owasp.org.cn/OWASP-CHINA/owasp-project/OWASP-TOP10-2021%E4%B8%AD%E6%96%87%E7%89%88V1.0%E5%8F%91%E5%B8%83.pdf)
 
-### 业界安全事件分析与借鉴
+### **⓶ 业界安全事件分析与借鉴**
 
 | **时间**  | **事件（点击链接可查看详情）**                                                                                                                    | **原因分析**                                                                                                                                                                  | **我们的参考应对**                                                                                                                                                                              |
 | --------- | ------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -43,3 +46,11 @@ comments: true
 | 2023/3/20 | [**ChatGPT 部分用户可查看他人聊天记录**](https://mp.weixin.qq.com/s/O-Kgvrtmg8hph5bmAnqFhg "https://mp.weixin.qq.com/s/O-Kgvrtmg8hph5bmAnqFhg")   | 所使用的**redis python 客户端连接池存在 bug**，对部分特殊场景的请求会错误分配到他人的处理连接，相应的返回他人的数据                                                           | 1、保持使用最新版或**安全版本的第三方软件**，对提示有漏洞的版本及时升级修复 <br>2、优先从内部软件源下载第三方组件，其次从软件官网                                                               |
 | 2023/1/15 | [**俄罗斯科技巨头 Yandex 内部源代码泄露**](https://mp.weixin.qq.com/s/1OJZ5ZhJsnRAHVTmoZ6LNw "https://mp.weixin.qq.com/s/1OJZ5ZhJsnRAHVTmoZ6LNw") | 员工**离职前恶意下载和泄露源代码**<br><br>（twitter 3 月份也有员工泄露源码事件）                                                                                              | 1、**源码中不写入密钥密码等敏感数据**，改为存放至七彩石或 KMS，收到类似风险提醒时切实修改，不随意忽略 <br>2、公司对源码恶意下载和泄露有监控和审计溯源能力，建议**团队内做好宣导，以免违规违法** |
 | 2023/3/3  | [**拼多多 app 利用漏洞恶意竞争被 google paly 下架**](https://zhuanlan.zhihu.com/p/610241711 "https://zhuanlan.zhihu.com/p/610241711")             | 拼多多 app 中综合**利用 android 低版本漏洞和手机厂商 OEM 代码漏洞**，达到： <br>1、隐蔽安装，无法卸载 <br>2、攻击竞争对手 App <br>3、窃取用户隐私数据 <br>4、逃避隐私合规监管 | 1、业务程序中**不利用漏洞**实现业务目的，不违规收集用户隐私数据                                                                                                                                 |
+
+更多安全指引，请参考 [《漏洞防护》](https://iwiki.woa.com/p/1024607317)
+
+## 小结
+
+**谚云：防患于未然**
+
+安全思想和漏洞防护是保护计算机系统和网络安全的重要方面。通过将安全性纳入系统设计和开发的早期阶段，并采取相应的漏洞防护措施，我们可以降低系统遭受攻击的风险，保护用户的数据和隐私，确保系统的正常运行。
