PUSH NOTE : 6. 池化思想：资源复用.md

--- a/source/_posts/6. 池化思想：资源复用.md
+++ b/source/_posts/6. 池化思想：资源复用.md
@@ -1,5 +1,4 @@
 ---
-uuid: 414147a2-691d-11ef-aa45-1da24f09c467
 tags:
   - 性能优化
   - 总结
@@ -12,13 +11,15 @@ date: 2024-08-15,16:41
 comments: true
 ---
 
-## 连接池：资源复用
+# 池化思想：资源复用
+
+## 业务场景
 
 **连接池（Connection Pool）是创建和管理连接的缓冲池技术。**
 
-常见的连接池有：数据库连接池（[redis](https://github.com/gomodule/redigo?tab=readme-ov-file)、[mysql](https://github.com/go-sql-driver/mysql)）、线程池（[Golang 协程池 ant](https://github.com/panjf2000/ants)）、HTTP 连接池等。
-
 连接池的原理是通过预先创建一定数量的连接对象，并将其保存在池中。当需要使用连接时，从池中获取一个可用的连接对象，使用完毕后归还给池，而不是每次都创建和销毁连接对象。这样可以避免频繁地创建和销毁连接对象，提高系统性能和资源利用率。
+
+常见的连接池有：数据库连接池（ [go-redis 连接池](https://github.com/go-redis/redis/tree/master/internal/pool)、[go-orm 连接池](https://github.com/go-xorm/manual-zh-CN/blob/master/chapter-01/1.engine.md)）、线程池（[Go 协程池 ants](https://github.com/panjf2000/ants)）、HTTP 连接池等。
 
 通常，连接池包含以下几个关键组件：
 
@@ -35,5 +36,24 @@ comments: true
 5. 销毁连接：当连接池不再需要时，可以销毁连接对象，释放资源。
 
 ![](assets/images/Pasted%20image%2020240314102315.png)
+
+## 案例
+
+### **⓵ [go-redis 连接池](https://github.com/go-redis/redis/tree/master/internal/pool)**
+
+总览下连接池的核心[代码结构](https://github.com/go-redis/redis/blob/master/internal/pool/pool.go)，go-redis 的连接池实现分为如下几个部分：
+
+1. 连接池初始化、管理连接
+2. 建立与关闭连接
+3. 获取与放回连接，核心实现 [Get](https://github.com/go-redis/redis/blob/master/internal/pool/pool.go#L259)、[Put](https://github.com/go-redis/redis/blob/master/internal/pool/pool.go#L366)
+4. 监控统计 && 连接保活配置
+
+![](assets/images/e1be7be262cc3ec77245b3d424f60f79_MD5.png)
+
+<center><font color="#7f7f7f">图：go-redis连接池的基本流程</font></center>
+
+原理可参考：[《Go-Redis 连接池（Pool）源码分析》](https://pandaychen.github.io/2020/02/22/A-REDIS-POOL-ANALYSIS/)
+
+## 小结
 
 总的来说，连接池是一种有效管理和复用连接的技术，它可以提高性能、节省资源、控制连接数、提高可靠性，并简化应用程序的编程。在高并发的场景下，使用连接池是一种常见的优化手段。
