PUSH NOTE : 2. 批量思想：解决 N+1 问题.md

--- a/source/_posts/2. 批量思想：解决 N+1 问题.md
+++ b/source/_posts/2. 批量思想：解决 N+1 问题.md
@@ -1,5 +1,4 @@
 ---
-uuid: 4140f981-691d-11ef-aa45-1da24f09c467
 tags:
   - 性能优化
   - 总结
@@ -12,17 +11,17 @@ date: 2024-08-06,16:25
 comments: true
 ---
 
-## 批量思想：解决 `N+1` 问题
+# 批量思想：解决 `N+1` 问题
+
+## 业务场景
 
 `N+1` 查询问题指的是当查询一个对象的列表数据的时候，会首先查询列表中的对象的 `ID`，然后循环生成单独的 `SQL/RPC` 去查询对象的详细数据。这会导致 `SQL/RPC` 查询过多问题。
 
-**业务场景：**
+在一个循环内多次执行 `RPC` 调用或者数据库操作。数据量小的时候问题不大，能跑起来。随着业务的发展，数据量越来越大，或者要查询的 `id` 越来越多（特别是未加限制的时候），耗时部题可想而知，长尾会越来越多。
 
-在一个循环内多次执行 `RPC` 调用或者数据库操作。数据量小的时候问题不大，能跑起来。
+## 案例
 
-随着业务的发展，数据量越来越大，或者要查询的 `id` 越来越多（特别是未加限制的时候），耗时部题可想而知，长尾会越来越多。
-
-**案例 1：**
+### **⓵ 循环中的 RPC**
 
 读取多条记录时在 `for` 循环中去分别读取单行。
 
@@ -33,14 +32,14 @@ for _, id := range ids {
 }
 ```
 
-**解决方案：**
-
-改批量（一次从存储中取出所有 id 的结果）
+解决方案：改批量（一次从存储中取出所有 id 的结果）
 
 ```go
 records := GetDetails(ids)
 // do something ...
 ```
+
+## 小结
 
 **谚云：积羽沉舟，群轻折轴**
 
