PUSH NOTE : 4. 并行思想：提升处理效率.md

--- a/source/_posts/4. 并行思想：提升处理效率.md
+++ b/source/_posts/4. 并行思想：提升处理效率.md
@@ -1,5 +1,4 @@
 ---
-uuid: 414147a0-691d-11ef-aa45-1da24f09c467
 tags:
   - 性能优化
   - 总结
@@ -12,13 +11,15 @@ date: 2024-08-08
 comments: true
 ---
 
-## 并行思想：提升处理效率
+# 并行思想：提升处理效率
 
-**业务场景：**
+## 业务场景
 
 并行思想是一种同时执行多个任务或操作的方法，以提高系统的处理能力和效率。在并行思想中，任务被分解为多个子任务，并且这些子任务可以同时执行，充分利用多核处理器或分布式系统的资源。
 
-**案例 1：**
+## 案例
+
+### **⓵ 并发合成字幕 & 上传 cos**
 
 智影极速版剪辑器生成视频时，我们会把字幕轨道先合成一个字幕文件并上传到 cos：
 ![](assets/images/Pasted%20image%2020240220195130.png)
@@ -50,7 +51,6 @@ func TracksAsSrt(ctx context.Context, tracks []*Track) (err error) {
 
 			// 把字幕上传到 cos
 			if _, err = tools.NewSrtCosHelper().Upload(ctx, filename, srt); err != nil {
-				log.ErrorContextf(ctx, "upload srt failed, filename[%v] err[%v]", filename, err)
 				return err
 			}
 			return nil
@@ -71,6 +71,7 @@ func TracksAsSrt(ctx context.Context, tracks []*Track) (err error) {
 func TracksAsSrtSingle(ctx context.Context, tracks Tracks) (err error) {
 	for i := range tracks {
 		i = i
+		// 模拟耗时
 		time.Sleep(100 * time.Millisecond)
 	}
 	return nil
@@ -82,6 +83,7 @@ func TracksAsSrtBatch(ctx context.Context, tracks Tracks) (err error) {
 	for i := range tracks {
 		i = i
 		eg.Go(func() error {
+		    // 模拟耗时
 			time.Sleep(100 * time.Millisecond)
 			return nil
 		})
@@ -90,52 +92,9 @@ func TracksAsSrtBatch(ctx context.Context, tracks Tracks) (err error) {
 }
 ```
 
-`file_test.go`:
-
-```go
-
-func BenchmarkTracksAsSrtSingle(b *testing.B) {
-	ctx := trpc.BackgroundContext()
-	for n := 0; n < b.N; n++ {
-		tracks := Tracks{
-			{},
-			{},
-			{},
-			{},
-			{},
-			{},
-			{},
-			{},
-			{},
-			{},
-		}
-		TracksAsSrtSingle(ctx, tracks)
-	}
-}
-
-func BenchmarkTracksAsSrtBatch(b *testing.B) {
-	ctx := trpc.BackgroundContext()
-	for n := 0; n < b.N; n++ {
-		tracks := Tracks{
-			{},
-			{},
-			{},
-			{},
-			{},
-			{},
-			{},
-			{},
-			{},
-			{},
-		}
-		TracksAsSrtBatch(ctx, tracks)
-	}
-}
-```
-
 压测结果符合预期：并行 10 个的话，性能提升 10 倍：
 
-```
+```shell
 cpu: VirtualApple @ 2.50GHz
 BenchmarkTracksAsSrtSingle
 BenchmarkTracksAsSrtSingle-10 1 1003969084 ns/op 2410792 B/op 19474 allocs/op
@@ -146,7 +105,9 @@ BenchmarkTracksAsSrtBatch
 BenchmarkTracksAsSrtBatch-10 10 100319896 ns/op 226600 B/op 2026 allocs/op
 ```
 
-细心的读者已经发现，通过并行处理也能变相地实现批量。不一定非要被下游服务提供一个批量接口（[2. 批量思想：解决 N+1 问题](1%20Project/腾讯/智影/浅析服务端优化/智影：浅析后端接口优化实战（20240331）/2.%20批量思想：解决%20N+1%20问题.md)）。
+细心的读者已经发现，通过并行处理也能变相地实现批量。不一定非要被下游服务提供一个批量接口（[2. 批量思想：解决 N+1 问题](1%20Project/腾讯/智影/浅析服务端优化/智影：浅析后端接口优化实战（20240331）/浅析服务端优化-longform/2.%20批量思想：解决%20N+1%20问题.md)）。
+
+## 小结
 
 **谚云：人多力量大**
 
