--- a/source/_posts/1. 防御性设计：验证.md
+++ b/source/_posts/1. 防御性设计：验证.md
@@ -1,5 +1,4 @@
 ---
-uuid: 4140f980-691d-11ef-aa45-1da24f09c467
 tags:
   - 性能优化
   - 总结
@@ -12,15 +11,17 @@ date: 2024-08-06,15:04
 comments: true
 ---
 
-## 防御性设计：验证
+# 防御性设计：验证
 
-**业务场景：**
+## 业务场景
 
 在日常开发中，尤其是在 web 应用开发中，我们经常需要对数据的合法性进行验证。为了实现这一目的，我们通常会对参数进行一些前置验证。这些验证规则可以包括必填项、范围、格式、正则表达式、安全性以及自定义规则等。
 
 通常，为简化业务逻辑，我们会借助一些第三方工具来进行这些通用性的检测。
 
-**案例 1：**
+## 案例
+
+### **⓵ Protocol Buffer Validation**
 
 如果是基于 pb 协议，可以启用 [protoc-gen-validate (PGV) ](https://github.com/bufbuild/protoc-gen-validate) 自动化数据校验插件。配置规则如：
 ![](assets/images/Pasted%20image%2020240206162835.png)
@@ -32,7 +33,11 @@ string title = 1 [(validate.rules).string = {min_len: 1, max_len: 100 }];
 
 > 一般地，保存数据库之前，为防止溢出，可对其长度做前置检查。
 
-**案例 2：**
+[《约束规则》](https://github.com/bufbuild/protoc-gen-validate?tab=readme-ov-file#constraint-rules)支持的类型有 Numerics、Bools、Strings、Bytes、Enums、Messages、Repeated、Maps 等。
+
+> tRPC 服务时，请参考[《tRPC Validation，让 RPC 框架自动做数据校验》](http://km.oa.com/articles/view/438840)
+
+### **⓶ Go Struct and Field validation**
 
 对于非 pb 定义的结构，也有一些类似的组件实现自动化校验。如 [Go Struct and Field validation](https://github.com/go-playground/validator) ，基本用法如下：
 
@@ -49,7 +54,9 @@ type User struct {
 }
 ```
 
-> 如果预置的 `valadator` 不满足需求，也可以自定义 `validator`。
+详细参考 [《常用的验证》](https://github.com/go-playground/validator?tab=readme-ov-file#baked-in-validations)。如果预置的 `valadator` 不满足需求，也可以自定义 `validator`。
+
+## 小结
 
 **谚云：防御不到位，上线跑断腿**
 
