PUSH NOTE : 0. 前言.md

--- a/source/_posts/0. 前言.md
+++ b/source/_posts/0. 前言.md
@@ -1,5 +1,4 @@
 ---
-uuid: 4140ab60-691d-11ef-aa45-1da24f09c467
 tags:
   - 性能优化
   - 总结
@@ -14,14 +13,12 @@ comments: true
 
 ![](assets/images/0d75eb6ae4c9774e40bea34839daadfb_MD5.webp)
 
-## 写在前面
+# 写在前面
 
 性能优化是软件项目开发过程中的一个永恒话题。
-
-%% 这是一个注释。 %%
 
 随着功能迭代，复杂度不断增加，同时伴随着流量、数据不断增长，接口性能可能会逐渐下降，尤其是在高并发场景，性能问题就更容易暴露出来。这时，我们也不能闲着。开始翻古书、找资料、访道友，不断提升，慢慢练成属于自己的七十二绝技。
 
 本文主要总结了日常开发中一些通用的优化手段，以期对日后的开发有所裨益。
 
-![](assets/images/26d480e575c0209bdf00e7cd0cac1e76_MD5.png)
+![](assets/images/016dea583c72914bfc08d6695cf95ef0_MD5.png)
