PUSH NOTE : 跟大师学语文-文章作法.md

--- a/source/_posts/跟大师学语文-文章作法.md
+++ b/source/_posts/跟大师学语文-文章作法.md
@@ -1,10 +1,8 @@
 ---
-uuid: 4b49cbc0-8f5e-11ef-9b33-d978bf868f38
 tags:
   - note
   - blog
   - 写作
-  - doing
 categories:
   - 读书笔记
 date: 2024-08-22,19:50
@@ -16,6 +14,36 @@ comments: true
 | 时间       | 备注                                 |
 | ---------- | ------------------------------------ |
 | 2024-08-22 | 第一次阅读。一本指导如何写作的好书。 |
+| 2024-10-13 | 阅读完。                             |
+
+# 笔记
+
+## 读《跟大师学语文-文章作法》
+
+> 书中共收录了语文教育大师夏丏尊、叶圣陶先生的五本关于语文学习的指导性名著。
+
+身处一个持续学习持续输出的时代，平时少不了总结一些知识点。刚开始写时，怎么也总结不好。要么写几行草草了事，要么长篇大论不知所云，抑或东拼西凑杂乱无章。
+
+冥冥之中自有天意，我遇到了《跟大师学语文-文章作法》。
+
+好文章如何作法？道亦有道，写作也是有方法的。文章有内容和形式两方面。所谓好文章，就是达意表情。
+
+书中提到，写作最为要紧的两个基本条件：真实、明确。
+**（1）真实：** 文章是传达自己意思和情感给别人的东西。
+**（2）明确：** 文章要能使读的人了解，才算达到了作文的目的，所以难解及容易误解的文章，都不能算是好的。
+
+理解了这些，你会突然明白。原来写作如此简单，把你想表达的讲明白，读者能理解清楚，这样的就是好文章。从此，不必再因文章太短而去凑字数，因为事儿就那么简单；也不再因长篇大论而强行删减，因为几句话讲不明白这么多道理。
+
+正如书中所说：法则没用而有用，就在这一点，作文法的真价值，也就在这一点。
+
+
+书中详细讲述了各类文体的特点、写法，还有很多的案例。注意，书中的内容很多是当年的教案整理而来，因此不仅对于我们的写作有指导性作用，对于学生写作的意义更大，也可能更有用。
+
+
+
+> 绝非标题党，是真大师。
+>
+> “跟大师学语文”丛书出版说明这套丛书此次共收录了《文章作法》、《文话七十二讲》、《文章讲话》、《怎样写作》和《语文随笔》五本关于语文学习的指导性名著。它们的作者就是著名的语文教育大师夏丏尊、叶圣陶先生。这就是丛书名的由来。
 
 法则没用而有用，就在这一点，作文法的真价值，也就在这一点。
 
