PUSH NOTE : 千字文注.md

--- a/source/_posts/千字文注.md
+++ b/source/_posts/千字文注.md
@@ -39,6 +39,9 @@ comments: true
 剑号巨阙，珠称夜光。
 > 1. 金：黄金。
 > 2. 丽水：古代河流名，金沙江流经今云南丽江境内的一段被称为丽江，也称丽水，此处自古便出道黄金。《韩非子·内储说上》：“荆南之地，丽水之中生金，人多窃采金。”
+> 3. 昆冈：昆仑山，位于今新疆和田北，这里出产著名的和田玉。
+> 4. 巨阙：古代名剑，以锋利著称。《荀子·性恶》：“桓公之蔥，太公之阙，文王之录，庄君之曶，阖闾之干将、莫邪、巨阙、辟闾，此皆古之良剑也。”
+> 5. 夜光：传说夜间放光，也被称为夜明珠。
 
 果珍李柰，菜重芥姜。
 海咸河淡，鳞潜羽翔。
